--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
                 sendMessage();
             }
         });
-    </script>
+    <script src="helper.js"></script>
 </body>
 </html>
