--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Помощник</title>
+  <title>Помощник с юмором</title>
   <script src="script.js"></script>
 </head>
 <body>
-  <h1>Добро пожаловать!</h1>
+  <h1>Привет! Я помощник с чуством юморора, как я могу тебе помочь?</h1>
   <p>Чем я могу вам помочь?</p>
   <input type="text" id="user-input">
   <button onclick="getResponse()">Отправить</button>
