--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <script src="script.js"></script>
 </head>
 <body>
-  <h1>Привет! Я помощник с чуством юморора, как я могу тебе помочь?</h1>
+  <h1>Привет! Я помощник с чуством юмора, как я могу тебе помочь?</h1>
   <p>Чем я могу вам помочь?</p>
   <input type="text" id="user-input">
   <button onclick="getResponse()">Отправить</button>
