--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <input type="text" id="user-input">
   <button onclick="getResponse()">Отправить</button>
   <div id="response"></div>
+  <h1>Ссылкана браузер yandex.com</h1>
 </body>
 </html>
